networking/httproutes/home/affine.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: affine-home
  namespace: affine
spec:
  parentRefs:
    - name: envoy-gateway-home
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - affine.home.timosur.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: affine
          port: 3010
