networking/httproutes/home/garden.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garden-home
  namespace: garden
spec:
  parentRefs:
    - name: envoy-gateway-home
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "garden.home.timosur.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 600s
        backendRequest: 600s
      backendRefs:
        - name: garden-nginx
          port: 80
