networking/httproutes/home/home-assistant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant-home
  namespace: home-assistant
spec:
  parentRefs:
    - name: envoy-gateway-home
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "ha.home.timosur.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: home-assistant
          port: 8123
