networking/httproutes/home/vaultwarden.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden-home
  namespace: vaultwarden
spec:
  parentRefs:
    - name: envoy-gateway-home
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "vault.home.timosur.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vaultwarden
          port: 80
