networking/httproutes/home/vinyl-manager.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vinyl-manager-home
  namespace: vinyl-manager
spec:
  parentRefs:
    - name: envoy-gateway-home
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "vinyl.home.timosur.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: desktop-proxy
          namespace: wol-proxy
          port: 8080
